# hiragana-asr

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: asr-llm-instruction-profile.md  comparison-whisper-moonshine.md  getting-started-run.md  m2-inference.md  pitch-accent-homophone-research.md  report-h100-medium-training.md  training-report-large-100h.md  transformer-project-overview.md  unity-integration.md
research/: 01_japanese_asr_models.md  02_ctc_advances.md  03_phoneme_recognition.md  04_voice_dialogue.md  05_edge_deployment.md  06_implications.md  README.md
scripts/: 00_prepare_dataset.py  00b_preprocess.py  00c_prepare_jsut.py  00d_prepare_jvs.py  01_train.py  02_evaluate.py  03_infer.py  04_export_alignment_csv.py  10_train_medium_1epoch_vast.sh  11_resume_medium_vast.sh  12_simulate_vast_cost.py  analyze_by_duration.py  export_onnx.py  realtime_asr.py  realtime_asr_claude_compare.py  realtime_asr_phoneme.py
src/asr/: __init__.py  augmentation.py  dataset.py  kana_converter.py  kana_vocab.py  losses.py  metrics.py  model.py  phoneme_converter.py  phoneme_vocab.py
unity/HiraganaAsr/: README.md  kana_vocab.json
unity/HiraganaAsr/Runtime/: CtcDecoder.cs  EnergyVadSegmenter.cs  HiraganaAsrModel.cs  KanaVocab.cs  MicrophoneCapture.cs  StreamingResampler.cs  Wav2Vec2Preprocessor.cs
unity/HiraganaAsr/Samples/: RealtimeAsrController.cs  SentisSmokeTest.cs  hiragana_asr_medium.parity.json
