[project]
name = "hiragana-asr"
version = "0.1.0"
description = "Lightweight Japanese ASR with kana + phoneme dual output for real-time voice dialogue"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.47.0",
    "datasets>=3.0.0,<4.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "wandb>=0.19.0",
    "torchcodec>=0.10.0",
    "sounddevice>=0.5.5",
    "pyopenjtalk>=0.4.1",
    "gdown>=5.2.1",
    "anthropic>=0.84.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
export = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
